approved by sir

--- a/contractor/src/index.css
+++ b/contractor/src/index.css
@@ -24,32 +24,39 @@
 }
 
 .custom-slider .ant-slider-handle {
-  background: linear-gradient(
-    135deg,
-    #6dd5ed,
-    #2193b0
-  ); /* Gradient background */
-  border: none; /* Remove border if needed */
-  width: 20px; /* Increase handle width */
-  height: 20px; /* Increase handle height */
-  border-radius: 50%; /* Make the handle circular */
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Add shadow for a 3D effect */
-  margin-top: -5px; /* Center the handle vertically */
-  transition: background 0.3s; /* Smooth transition for background color */
+  background: linear-gradient(135deg, #6dd5ed, #2193b0);
+  border: none;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  margin-top: -5px;
+  transition:  0.3s;
 }
 
 .custom-slider .ant-slider-handle:hover {
-  background: linear-gradient(
-    135deg,
-    #90ee90,
-    #32cd32
-  ); /* Light green gradient on hover */
+  background: linear-gradient(135deg, #90ee90, #32cd32);
 }
 
 .custom-slider .ant-slider-rail {
-  height: 10px; /* Increase rail height */
+  height: 10px;
 }
 
 .custom-slider .ant-slider-mark-text {
-  color: #0a5f59; /* Change mark text color */
+  color: #0a5f59;
+}
+
+.site-form-item-icon {
+  color: white;
+  padding: 1rem;
+  border-radius: 5%;
+  background-color: #0a5f59;
+}
+
+.data-row:nth-child(even) {
+  background-color: white;
+}
+
+.data-row:nth-child(odd) {
+  background-color: #fbf9f7;
 }
